modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/match_with_subscript.gd
func test():
	var dict = { a = 1 }
	match 2:
		dict["a"]:
			print("not allowed")
